# Veridion

./: .gitignore  .markdownlint.json  CHANGELOG.md  DECISIONS.md  README.md  SECURITY.md  STARTUP_AUDIT_REPORT.md  action.yml  cspell.json  lychee.toml  package-lock.json  package.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug-report.md  config.yml
.github/workflows/: container-security.yml  github-app-tests.yml  license.yml  linkcheck.yml  markdown.yml  prettier.yml  publish-pypi.yml  spellcheck.yml  tests.yml  veridion-diff-test.yml
assets/: README.md
constitution/: VDP--001-Specification-Specification.md  VDP-0000-Veridion-Constitution.md  VDP-0001-Repository-Discovery-and-Canonical-Layout.md  VDP-0002-Core-Processor-Model.md  VDP-0003-Processing-Context-and-Capability-Model.md
docs/: proposal-lifecycle.md  specification-process.md
docs/governance/: CONSTITUTIONAL-ROLE-MATRIX.md
docs/operations/: BRANCH-PROTECTION.md  DATA-HANDLING.md  DEPLOYMENT-VERIFICATION.md  INCIDENT-RESPONSE.md  README.md  SLOS.md  SUPPORT-PROCESS.md
docs/processor/: CAPABILITY-MODEL.md  PROCESSING-CONTEXT.md  PROCESSOR-LIFECYCLE.md  README.md
docs/repository/: BOOTSTRAP-ALGORITHM.md  README.md
docs/reviews/: VDP--001-ACCEPTANCE-CHECKLIST.md  VDP--001-BOOTSTRAP-ACCEPTANCE-RECORD.md  VDP--001-SEMANTIC-FIDELITY-REPORT.md  VDP-0000-DRAFT-SELF-REVIEW.md  VDP-0001-DRAFT-SELF-REVIEW.md  VDP-0002-0003-INDEPENDENT-EXECUTION-REVIEW.md  VDP-0002-DRAFT-SELF-REVIEW.md  VDP-0003-DRAFT-SELF-REVIEW.md
docs/superpowers/plans/: 2026-07-15-veridion-ci-pr-integration.md  2026-07-15-veridion-continuity-history.md  2026-07-15-veridion-mcp-server.md  2026-07-15-veridion-part-ix-roadmap.md  2026-07-16-aletheore-multi-language-endpoint-mapping-plan.md  2026-07-17-aletheore-github-app-paid-tier-plan.md  2026-07-17-aletheore-semantic-search-plan.md  2026-07-18-aletheore-database-model-detection.md  2026-07-18-aletheore-dependency-manifest-fallbacks-plan.md  2026-07-18-aletheore-embedding-fallback-plan.md  2026-07-18-aletheore-infrastructure-environment-detection.md  2026-07-18-shared-llm-spend-cap.md  2026-07-19-aletheore-cli-quality-of-life.md  2026-07-19-aletheore-website-content-update.md  2026-07-24-aletheore-hosted-mcp-implementation-plan.md
docs/superpowers/specs/: 2026-07-15-veridion-architecture-config-design.md  2026-07-15-veridion-ci-pr-integration-design.md  2026-07-15-veridion-git-history-secrets-design.md  2026-07-15-veridion-part-iv-architecture-design.md  2026-07-15-veridion-query-subcommands-design.md  2026-07-17-aletheore-github-app-health-monitoring-design.md  2026-07-17-aletheore-github-app-public-health-api-design.md  2026-07-17-aletheore-marketing-website-design.md  2026-07-17-aletheore-semantic-search-design.md  (+5 more)
examples/: VDP-EXAMPLE.md
github-app/: .env.example  Dockerfile.app-server  Dockerfile.scan-worker  README.md  docker-compose.yml  requirements.txt
github-app/app_server/: admin.py  audit_signing.py  auth.py  config.py  dashboard.py  db.py  evidence_limits.py  frontend.py  llm_cost.py  logging_config.py  main.py  managed_audit_api.py  rate_limit.py
github-app/migrations/: 003_health_monitoring.sql  004_managed_audit_rate_limit.sql  005_llm_spend_cap.sql  008_live_wiki.sql  009_installation_members.sql  013_flash_review_cache.sql  014_endpoint_health_response_shape.sql  015_audit_reports.sql
github-app/scan_worker/: db.py  flash_review.py  flash_review_cache.py  github_api.py  jobs.py  managed_audit.py  scheduler.py  slack.py  worker.py
github-app/tests/: conftest.py  test_admin.py  test_audit_signing.py  test_auth.py  test_config.py  test_dashboard.py  test_db.py  test_evidence_limits.py  test_flash_review.py  test_flash_review_cache.py  test_github_api.py  test_jobs.py  test_llm_cost.py  test_logging_config.py  test_main.py  test_managed_audit.py  test_managed_audit_api.py  test_marketplace_webhook.py  test_pr_scan_e2e.py  test_rate_limit.py  test_regression_risk.py  test_scan_worker_db.py  test_slack.py  test_stale_endpoints.py
prototype/: README.md  conftest.py  pyproject.toml
prototype/aletheore/: answer.py  architecture.py  cli.py  dashboard.py  device_auth.py  endpoints.py  evidence.py  healthcheck.py  history.py  licenses.py  managed_audit_client.py  mcp_server.py  query.py  report.py  search_index.py  secrets.py  vulnerabilities.py  wiki_diagrams.py  wiki_mapping.py
prototype/aletheore/adapters/: anthropic_native.py  base.py  claude_code.py  codex_cli.py  gemini_cli.py  grok_build.py  mistral_vibe.py  openai_compatible.py
prototype/aletheore/git_intel/: analyzer.py
prototype/aletheore/manual/: part-2-repository-intelligence.md  part-7-perspectives.md
prototype/aletheore/scanner/: detect.py  graph.py
prototype/manual/: part-1-operating-instructions.md  part-5-security.md  part-9-roadmap.md
prototype/tests/: test_adapters.py  test_answer.py  test_anthropic_adapter.py  test_architecture.py  test_cli.py  test_cli_agent_adapters.py  test_dashboard.py  test_detect.py  test_device_auth.py  test_endpoints.py  test_evidence.py  test_git_intel.py  test_graph.py  test_graph_cpp.py  test_graph_csharp.py  test_graph_go.py  test_graph_java.py  test_graph_php.py  test_graph_ruby.py  test_graph_rust.py  test_healthcheck.py  test_history.py  test_licenses.py  test_managed_audit_client.py  test_mcp_server.py  test_openai_compatible_adapter.py  test_query.py  test_scaffold.py  test_search_index.py  test_secrets.py  test_secrets_history.py  test_vulnerabilities.py  test_wiki_diagrams.py  test_wiki_mapping.py
prototype/veridion/: cli.py  dashboard.py  endpoints.py  evidence.py  history.py  mcp_server.py  report.py  secrets.py  vulnerabilities.py
prototype/veridion/adapters/: base.py  claude_code.py
prototype/veridion/git_intel/: analyzer.py
prototype/veridion/scanner/: detect.py  graph.py
schemas/: vdp.schema.json
templates/: VDP_TEMPLATE.md
website/: developers.html  index.html  pricing.html  privacy.html  refund.html  script.js  sitemap.xml  styles.css  terms.html
(+1 files in other folders)
