[project]
name = "aletheore"
version = "0.1.1"
description = "Evidence-grounded repository audit CLI: deterministic scanner, MCP server, live dashboard, and a GitHub Action that posts PR diffs."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Arihant Kaul", email = "arihantkaul@outlook.com" }]
requires-python = ">=3.11"
keywords = ["code-review", "static-analysis", "secrets-detection", "dependency-vulnerabilities", "mcp-server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-python>=0.25,<0.26",
    "tree-sitter-javascript>=0.25,<0.26",
    "tree-sitter-typescript>=0.23,<0.24",
    "tree-sitter-go>=0.25,<0.26",
    "tree-sitter-rust>=0.24,<0.25",
    "tree-sitter-java>=0.23,<0.24",
    "tree-sitter-ruby>=0.23,<0.24",
    "tree-sitter-php>=0.24,<0.25",
    "tree-sitter-c>=0.24,<0.25",
    "tree-sitter-cpp>=0.23,<0.24",
    "tree-sitter-c-sharp>=0.23,<0.24",
    "certifi>=2024.0.0",
    "networkx>=3.0,<4.0",
    "mcp>=1.23,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/ArihantK15/Aletheore"
Repository = "https://github.com/ArihantK15/Aletheore"
Issues = "https://github.com/ArihantK15/Aletheore/issues"

[project.scripts]
aletheore = "aletheore.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aletheore*"]

[tool.setuptools.package-data]
aletheore = ["static/*.png"]

[tool.pytest.ini_options]
addopts = ["-p", "no:randomly"]
